--- a/uetool/build.gradle
+++ b/uetool/build.gradle
@@ -12,6 +12,7 @@ android {
 dependencies {
   implementation 'com.android.support:appcompat-v7:27.1.1'
   implementation 'com.android.support:recyclerview-v7:27.1.1'
+  implementation 'com.facebook.fresco:fresco:1.4.0'
 }
 
 modifyPom {
