--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
   <uses-permission android:name="android.permission.INTERNET"/>
 
   <application
+      android:name="me.ele.uetool.sample.AppContext"
       android:allowBackup="true"
       android:icon="@mipmap/ic_launcher"
       android:label="@string/app_name"
@@ -17,6 +18,11 @@
 
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
+    </activity>
+    <activity
+        android:label="@string/title_activity_second"
+        android:name="me.ele.uetool.sample.SecondActivity"
+        android:theme="@style/AppTheme.NoActionBar">
     </activity>
   </application>
 
