--- a/build.gradle
+++ b/build.gradle
@@ -1,32 +1,38 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
-    repositories {
-        google()
-        jcenter()
-        maven {
-            url "http://maven.dev.elenet.me/nexus/content/groups/public"
-        }
+  ext.versions = ['minSdk'    : 14,
+                  'targetSdk' : 26,
+                  'compileSdk': 26,
+                  'buildTool' : '26.0.1',
+
+                  'supportLibrary': '27.1.1',
+                  'fresco': '1.4.0',
+
+                  'release'   : '1.0.3-SNAPSHOT',]
+  repositories {
+    jcenter()
+    maven {
+      url "http://maven.dev.elenet.me/nexus/content/groups/public"
     }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.0'
-        classpath 'me.ele:eradle:1.7.0'
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
+  }
+  dependencies {
+    classpath 'com.android.tools.build:gradle:2.3.3'
+    classpath 'me.ele:eradle:1.7.0'
+    // NOTE: Do not place your application dependencies here; they belong
+    // in the individual module build.gradle files
+  }
 }
 
 allprojects {
-    repositories {
-        google()
-        jcenter()
-        maven {
-            url "http://maven.dev.elenet.me/nexus/content/groups/public"
-        }
+  repositories {
+    jcenter()
+    maven {
+      url "http://maven.dev.elenet.me/nexus/content/groups/public"
     }
+  }
 }
 
 task clean(type: Delete) {
-    delete rootProject.buildDir
+  delete rootProject.buildDir
 }
