--- a/uetool-base/build.gradle
+++ b/uetool-base/build.gradle
@@ -8,18 +8,16 @@ android {
   defaultConfig {
     minSdkVersion versions.minSdk
   }
-}
 
-dependencies {
-  //  compile project(':uetool-base')
-  compile "me.ele:uetool-base:${versions.release}"
-  compile "com.android.support:recyclerview-v7:${versions.supportLibrary}"
+  dependencies {
+    compile "com.android.support:appcompat-v7:${versions.supportLibrary}"
+  }
 }
 
 modifyPom {
   project {
     groupId 'me.ele'
-    artifactId 'uetool'
+    artifactId 'uetool-base'
     version versions.release
     packaging 'aar'
   }
