--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ dependencies {
 
   debugCompile project(':uetool')
   debugCompile project(':uetool-fresco')
-  releaseCompile project(':uetool-no-op')
+//  releaseCompile project(':uetool-no-op')
 //  debugCompile "me.ele:uetool:${versions.release}"
 //  debugCompile "me.ele:uetool-fresco:${versions.release}"
 //  releaseCompile "me.ele:uetool-no-op:${versions.release}"
