--- a/uetool-fresco/build.gradle
+++ b/uetool-fresco/build.gradle
@@ -12,8 +12,8 @@ android {
 }
 
 dependencies {
-  compile project(':uetool-base')
-  //  compile "me.ele:uetool-base:${versions.release}"
+  //  compile project(':uetool-base')
+  compile "me.ele:uetool-base:${versions.release}"
   provided "com.facebook.fresco:fresco:${versions.fresco}"
 }
 
