--- a/uetool/src/main/AndroidManifest.xml
+++ b/uetool/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="me.ele.uetool">
 
+  <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+
   <application>
     <activity
         android:name="me.ele.uetool.TransparentActivity"
