opt move interaction

--- a/uetool/build.gradle
+++ b/uetool/build.gradle
@@ -16,8 +16,8 @@ android {
 }
 
 dependencies {
-  //  compile project(':uetool-base')
-  compile "me.ele:uetool-base:${versions.release}"
+  compile project(':uetool-base')
+  //  compile "me.ele:uetool-base:${versions.release}"
   compile "com.android.support:recyclerview-v7:${versions.supportLibrary}"
 }
 
