--- a/uetool/build.gradle
+++ b/uetool/build.gradle
@@ -15,9 +15,9 @@ android {
 }
 
 dependencies {
-    compile project(':uetool-base')
-    //  compile "me.ele:uetool-base:${versions.release}"
-    compile "com.android.support:recyclerview-v7:${versions.supportLibrary}"
+    api project(':uetool-base')
+    //  api "me.ele:uetool-base:${versions.release}"
+    implementation "com.android.support:recyclerview-v7:${versions.supportLibrary}"
 }
 
 publish {
