--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-buildscript {
+buildscript { 
+    ext.kotlin_version = '1.3.31'
+
     ext.versions = ['minSdk'        : 14,
                     'targetSdk'     : 28,
                     'compileSdk'    : 28,
@@ -9,7 +11,7 @@ buildscript {
                     'supportLibrary': '27.1.1',
                     'fresco'        : '1.4.0',
 
-                    'release'       : '1.0.18',]
+                    'release'       : '1.1.0',]
     repositories {
         jcenter()
         google()
@@ -19,7 +21,7 @@ buildscript {
         classpath 'com.novoda:bintray-release:0.8.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-    }
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version" }
 }
 
 allprojects {
