support show activity's fragment tree

--- a/uetool-fresco/build.gradle
+++ b/uetool-fresco/build.gradle
@@ -8,11 +8,15 @@ android {
     defaultConfig {
         minSdkVersion versions.minSdk
     }
+
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
     implementation project(':uetool-base')
-    //  implementation "me.ele:uetool-base:${versions.release}"
+//      implementation "me.ele:uetool-base:${versions.release}"
     compileOnly "com.facebook.fresco:fresco:${versions.fresco}"
 }
 
