--- a/uetool/build.gradle
+++ b/uetool/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     implementation "com.android.support:recyclerview-v7:${versions.supportLibrary}"
     implementation "com.android.support:support-v4:${versions.supportLibrary}"
     implementation 'com.jakewharton.scalpel:scalpel:1.1.2'
+    implementation 'com.github.bmelnychuk:atv:1.2.9'
 }
 
 publish {
