fix collect view bug

--- a/uetool-base/build.gradle
+++ b/uetool-base/build.gradle
@@ -12,6 +12,10 @@ android {
     dependencies {
         api "com.android.support:appcompat-v7:${versions.supportLibrary}"
     }
+
+    lintOptions {
+        abortOnError false
+    }
 }
 
 publish {
