[bugfix]uetool no-op support registerAttrDialogItemViewBinder

--- a/uetool-no-op/build.gradle
+++ b/uetool-no-op/build.gradle
@@ -10,6 +10,10 @@ android {
     }
 }
 
+dependencies {
+    api project(path: ':uetool-base')
+}
+
 publish {
     userOrg = 'jackcho'
     groupId = 'me.ele'
