--- a/uetool-base/build.gradle
+++ b/uetool-base/build.gradle
@@ -11,6 +11,8 @@ android {
 
     dependencies {
         api "com.android.support:appcompat-v7:${versions.supportLibrary}"
+        implementation "com.android.support:recyclerview-v7:${versions.supportLibrary}"
+        implementation "com.android.support:support-v4:${versions.supportLibrary}"
     }
 
     lintOptions {
