--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
                     'supportLibrary': '27.1.1',
                     'fresco'        : '1.0.1',
 
-                    'release'       : '1.2.5',]
+                    'release'       : '1.2.7',]
     repositories {
         jcenter()
         google()
@@ -19,6 +19,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
         classpath 'com.novoda:bintray-release:0.9'
+        classpath 'me.ele:lancet-plugin:1.0.6'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version" }
