--- a/uetool-fresco/build.gradle
+++ b/uetool-fresco/build.gradle
@@ -14,8 +14,8 @@ android {
 }
 
 dependencies {
-    implementation project(':uetool-base')
-//      implementation "me.ele:uetool-base:${versions.release}"
+//    implementation project(':uetool-base')
+      implementation "me.ele:uetool-base:${versions.release}"
     compileOnly "com.facebook.fresco:fresco:${versions.fresco}"
 }
 
