--- a/build.gradle
+++ b/build.gradle
@@ -14,11 +14,11 @@ buildscript {
                     'release'       : '1.3.0',]
     repositories {
         jcenter()
+        mavenCentral()
         google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
-        classpath 'com.novoda:bintray-release:0.9'
         classpath 'me.ele:lancet-plugin:1.0.6'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -28,6 +28,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        mavenCentral()
         google()
     }
 }
