--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,8 +32,8 @@ android {
 }
 
 dependencies {
-    implementation "com.android.support:appcompat-v7:${versions.supportLibrary}"
-    implementation "com.android.support:design:${versions.supportLibrary}"
+    implementation "com.android.support:appcompat-v7:27.1.1"
+    implementation "com.android.support:design:27.1.1"
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation "com.facebook.fresco:fresco:${versions.fresco}"
     implementation "com.facebook.fresco:animated-gif:${versions.fresco}"
@@ -45,6 +45,7 @@ dependencies {
 
     debugImplementation project(':uetool')
     debugImplementation project(':uetool-fresco')
+    debugImplementation project(':uetool-base')
     releaseImplementation project(':uetool-no-op')
 //  debugImplementation "me.ele:uetool:${versions.release}"
 //  debugImplementation "me.ele:uetool-fresco:${versions.release}"
