--- a/uetool-base/build.gradle
+++ b/uetool-base/build.gradle
@@ -8,9 +8,9 @@ android {
     }
 
     dependencies {
-        api "com.android.support:appcompat-v7:${versions.supportLibrary}"
-        api "com.android.support:recyclerview-v7:${versions.supportLibrary}"
-        api "com.android.support:support-v4:${versions.supportLibrary}"
+        api "com.android.support:appcompat-v7:27.1.1"
+        api "com.android.support:recyclerview-v7:27.1.1"
+        api "com.android.support:support-v4:27.1.1"
     }
 
     lintOptions {
