--- a/uetool/build.gradle
+++ b/uetool/build.gradle
@@ -16,5 +16,7 @@ dependencies {
     compileOnly project(':uetool-base')
 //      api "me.ele:uetool-base:${versions.release}"
     implementation 'com.jakewharton.scalpel:scalpel:1.1.2'
-    implementation 'com.github.bmelnychuk:atv:1.2.9'
+    implementation ('com.github.bmelnychuk:atv:1.2.9') {
+        exclude group: 'com.android.support', module: 'appcompat-v7'
+    }
 }
