--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,9 @@ buildscript {
         classpath 'me.ele:lancet-plugin:1.0.6'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version" }
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+    }
 }
 
 allprojects {
